--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Terragrunt
+**/.terraform/*
+**/.terragrunt-cache/*
